--- a/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
@@ -33,12 +33,6 @@
                             <constraint firstAttribute="height" constant="0.5" id="33w-qH-m7N"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RMB:199" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYA-FP-Cd3">
-                        <rect key="frame" x="108" y="58" width="65" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Valvola法莫拉天然植物萃取保加利亚玫瑰纯露200ml" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UlF-Tk-dWI">
                         <rect key="frame" x="108" y="8" width="202" height="48"/>
                         <constraints>
@@ -46,6 +40,24 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RMB:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYA-FP-Cd3">
+                        <rect key="frame" x="108" y="58" width="30" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="3Fk-Tw-HfL"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yDF-sZ-3mY">
+                        <rect key="frame" x="141" y="58" width="38" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="2bm-g8-D2C"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1e-m4-kIK">
@@ -78,26 +90,28 @@
                     <constraint firstItem="nSL-kj-gLK" firstAttribute="top" secondItem="A0p-VQ-TKJ" secondAttribute="bottom" constant="4" id="0pi-rJ-mJ9"/>
                     <constraint firstItem="W1e-m4-kIK" firstAttribute="leading" secondItem="otV-Dq-b6g" secondAttribute="trailing" constant="136" id="13X-2B-SdL"/>
                     <constraint firstItem="UlF-Tk-dWI" firstAttribute="leading" secondItem="NhN-r3-pHL" secondAttribute="trailing" constant="8" id="6b5-rZ-4p1"/>
+                    <constraint firstItem="yDF-sZ-3mY" firstAttribute="top" secondItem="UlF-Tk-dWI" secondAttribute="bottom" constant="2" id="AZt-sn-pwo"/>
                     <constraint firstAttribute="trailing" secondItem="nSL-kj-gLK" secondAttribute="trailing" id="Bx6-Qy-AQI"/>
                     <constraint firstItem="nSL-kj-gLK" firstAttribute="top" secondItem="W1e-m4-kIK" secondAttribute="bottom" constant="8.5" id="Ccg-Lj-3od"/>
                     <constraint firstAttribute="trailing" secondItem="UlF-Tk-dWI" secondAttribute="trailing" constant="10" id="CeT-Zk-tcj"/>
                     <constraint firstItem="NhN-r3-pHL" firstAttribute="leading" secondItem="sgc-ol-QRs" secondAttribute="leading" constant="8" id="HIj-mQ-kWf"/>
                     <constraint firstItem="UlF-Tk-dWI" firstAttribute="top" secondItem="sgc-ol-QRs" secondAttribute="top" constant="8" id="J88-R6-FRc"/>
-                    <constraint firstItem="otV-Dq-b6g" firstAttribute="leading" secondItem="DYA-FP-Cd3" secondAttribute="trailing" constant="-65" id="M45-GF-rbu"/>
                     <constraint firstItem="NhN-r3-pHL" firstAttribute="centerY" secondItem="sgc-ol-QRs" secondAttribute="centerY" id="Osb-Ee-97X"/>
+                    <constraint firstItem="DYA-FP-Cd3" firstAttribute="top" secondItem="UlF-Tk-dWI" secondAttribute="bottom" constant="2" id="Q0z-YK-tfb"/>
                     <constraint firstItem="A0p-VQ-TKJ" firstAttribute="leading" secondItem="otV-Dq-b6g" secondAttribute="trailing" constant="1" id="VKK-UT-x0w"/>
                     <constraint firstItem="otV-Dq-b6g" firstAttribute="top" secondItem="W1e-m4-kIK" secondAttribute="top" constant="24" id="VKz-r1-gcT"/>
-                    <constraint firstItem="DYA-FP-Cd3" firstAttribute="leading" secondItem="UlF-Tk-dWI" secondAttribute="leading" id="bQz-Tl-Ccy"/>
-                    <constraint firstItem="DYA-FP-Cd3" firstAttribute="top" secondItem="UlF-Tk-dWI" secondAttribute="bottom" constant="2" id="bma-Vs-vcG"/>
                     <constraint firstItem="W1e-m4-kIK" firstAttribute="trailing" secondItem="sgc-ol-QRs" secondAttribute="trailingMargin" id="cI5-2h-vvf"/>
                     <constraint firstItem="nSL-kj-gLK" firstAttribute="leading" secondItem="sgc-ol-QRs" secondAttribute="leading" constant="116" id="fvY-zc-ydY"/>
+                    <constraint firstItem="DYA-FP-Cd3" firstAttribute="leading" secondItem="NhN-r3-pHL" secondAttribute="trailing" constant="8" id="gaw-yJ-gIw"/>
+                    <constraint firstItem="yDF-sZ-3mY" firstAttribute="leading" secondItem="DYA-FP-Cd3" secondAttribute="trailing" constant="3" id="gqG-R7-fAV"/>
                     <constraint firstAttribute="bottom" secondItem="nSL-kj-gLK" secondAttribute="bottom" id="tNa-wN-ivl"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="Cp" destination="A0p-VQ-TKJ" id="jaK-Wp-vjX"/>
+                <outlet property="CurrencySymbolLabel" destination="DYA-FP-Cd3" id="TsV-r9-pYR"/>
                 <outlet property="ShopimageView" destination="NhN-r3-pHL" id="vmt-6h-SZo"/>
-                <outlet property="priceLabel" destination="DYA-FP-Cd3" id="2FE-lh-fcp"/>
+                <outlet property="priceLabel" destination="yDF-sZ-3mY" id="L0P-SS-Zrb"/>
                 <outlet property="shopTextLabel" destination="UlF-Tk-dWI" id="dVg-9O-Tjd"/>
             </connections>
             <point key="canvasLocation" x="13" y="52"/>
